# edu-python-course.github.io

./: .gitignore  .gitmodules  Makefile  conf.py  lesson29.md  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: build_pdf.yml  deploy_pages.yml  test_build.yml
assets/mermaid/git/: merge-1.mmd  merge-2.mmd
docs/: conf.py  index.txt
docs/_locales/ua/LC_MESSAGES/: index.po  linux.po  python-quiz.po
docs/linux/: appx_reserved_vars.txt  index.txt  overview.txt  redirect.txt  security.txt  terminal.txt  variable.txt
mindmaps/: basics-function.mmd  django-intro.mmd  django-models.mmd  django-templates.mmd  rdbms-acid.mmd  rdbms-normalization.mmd  rdbms-relationship.mmd
src/: conf.js  conf.py  index.txt  refs.bib
src/_locales/ua/LC_MESSAGES/: basics.po
src/_locales/uk/LC_MESSAGES/: basics.po
src/_static/: default.css  default.css.map  default.scss
src/_static/js/: theme.js
src/_static/scss/: colors.scss  presentation-common.scss  presentation-normalization.scss
src/appx/: blog.md  busybox.txt  code_edit.txt
src/basics/: bool_logic.txt  index.txt  lists.txt  stdtypes.txt
src/django/: cbv.txt  index.txt  ulrs.txt  url_dispatcher.txt  urls.txt
src/intro/: index.txt  install.txt  interact.txt
src/linux/: commands.txt  filesys.txt  index.txt  ssh.txt  symlinks.txt  users.txt  utils.txt
src/rdbms/: datatypes.txt  ddl.txt  dml.txt  query.txt
src/rdbms/presentations/: normalization.html
src/rdbms/presentations/normalization/: _index.hbs  anomalies-delete.hbs  anomalies-insert.hbs  example.hbs  (+24 more)
src/vcs/: basics.txt  branch.txt
(+6 files in other folders)
