[tool.poetry]
name = "python-course"
version = "2024.04.dev"
description = "Python training course materials"
license = "MIT"
authors = [
    "Vladyslav Ponomaryov",
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
homepage = "https://edu-python-course.github.io"
repository = "https://github.com/edu-python-course/edu-python-course.github.io"
keywords = [
    "python",
    "training",
    "course",
    "education"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Ukrainian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.9"
myst-parser = "^2.0.0"
Sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-intl = "^2.1.0"
sphinx-reredirects = "^0.1.3"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
tomli = "^2.0.1"
sphinx-material = "^0.0.36"
sphinx-immaterial = "^0.11.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
